Turning area made visible Stop line linked to stopArea in model

--- a/src/main/resources/style.css
+++ b/src/main/resources/style.css
@@ -38,3 +38,7 @@
     -fx-stroke-line-cap: butt;
 }
 
+.area {
+    -fx-fill: #ffb0be;
+}
+
